k8s/cloudnativepg/manifests/pg-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-admin
  namespace: databases
  labels:
    app: pg-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pg-admin
  template:
    metadata:
      labels:
        app: pg-admin
    spec:
      nodeSelector:
        node.kubernetes.io/worker: "true"
        topology.kubernetes.io/region: "sg-prod-01"
      securityContext:
        runAsUser: 5050
        runAsGroup: 5050
        fsGroup: 5050
      containers:
        - name: pg-admin
          image: dpage/pgadmin4:9.9.0
          ports:
            - containerPort: 80
          volumeMounts:
          - name: pgadmin-data
            mountPath: /var/lib/pgadmin
      volumes:
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pg-admin-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pg-admin-svc
  namespace: databases
spec:
  selector:
    app: pg-admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-ingress
  namespace: databases
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pg-admin.mcb-svc.work`)
      kind: Rule
      services:
        - name: pg-admin-svc
          port: 80
          scheme: http
  tls:
    secretName: pg-admin-cert-tls
